# gir.core

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  General.props  GirCore.sln  LICENSE  README.md  WINDOWS.md  azure-pipelines.yml  readme.md
.github/: dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml  queries.qls
.github/workflows/: ci.yml  codeql-analysis.yml  deploy-homepage.yml  documentation.yml  dotnet-format-daily.yml  publish_alpha.yml  qodana.yml  release.yml  update-gir-files.yml
.ionide/: symbolCache.db
CWrapper/: CWrapper.cs  CWrapper.csproj  ClassGenerator.Generated.cs  ClassGenerator.cs  DelegatesGenerator.Generated.cs  DelegatesGenerator.cs  EnumGenerator.Generated.cs  EnumGenerator.cs  MethodsGenerator.Generated.cs  MethodsGenerator.cs  StructGenerator.Generated.cs  StructGenerator.cs
CWrapper/Configuration/: CSharpIdentifierFixer.cs  IdentifierFixer.cs
CWrapper/Data/: Class.cs  Delegate.cs  Enum.cs  Method.cs  Namespace.cs  Parameter.cs  Struct.cs
CWrapper/Extensions/: IEnumerableParametersExtension.cs  MethodExtension.cs  StringExtension.cs
CWrapper/Generate/: CWrapper.Generate.csproj  Program.cs
CWrapper/Templates/: ClassTemplate.tt  DelegatesTemplate.tt  EnumTemplate.tt  MethodsTemplate.tt  StructTemplate.tt
Generator/: Container.cs  Convert.cs  CoreGenerator.cs  DelegateGenerator.cs  DllImportResolver.cs  FileResolver.cs  Folder.cs  GLibGenerator.cs  GObjectGenerator.cs  Generator.cs  Generator.csproj  Gsk-4.0.gir  IncludeResolver.cs  Loader.cs  Log.cs  Metadata.cs  MethodGenerator.Block.cs  MethodGenerator.cs  Project.cs  TemplateLoader.cs  TemplateWriter.cs  Tool.cs  WrapperGenerator.cs  Writer.cs
Generator/Analysis/: SymbolInfo.cs  TypeDictionary.AliasDict.cs  TypeDictionary.SymbolDict.cs  TypeDictionary.cs  TypeDictionaryView.cs  TypeInfo.cs
Generator/Data/: Enum.cs  ImportableMethod.cs  ImportableMethodContainer.cs  Method.cs  Parameter.cs
Generator/Extensions/: AnyTypeExtension.cs  ArgumentExtension.cs  ArgumentsExtension.cs  ArrayExtension.cs  CallbackExtension.cs  ClassExtension.cs  ConstantExtension.cs  ElementExtension.cs  FieldExtension.cs  FieldsExtension.cs  GParameterExtension.cs  MethodExtension.cs  NamespaceExtension.cs  ObjectExtension.cs  ParameterExtension.cs  ParameterListExtension.cs  RecordExtension.cs  ReturnValueExtension.cs  StringExtension.cs  SymbolExtension.cs  TransferExtension.cs  TypeExtension.cs
Generator/Factories/: DllImportResolverFactory.cs  ScriptObjectFactory.cs
Generator/Gir/: GAlias.cs  GArray.cs  GCallback.cs  GClass.cs  GConstant.cs  GDoc.cs  GEnumaration.cs  GEnumeration.cs  GField.cs  GImplement.cs  GInclude.cs  GInterface.cs  GMember.cs  GMethod.cs  GNamespace.cs  GParameter.cs  GParameters.cs  GProperty.cs  GRecord.cs  GRepository.cs  GReturnValue.cs  GSignal.cs  GType.cs  GVarArgs.cs  GVirtualMethod.cs  GVirtualMethodcs.cs  GirReader.cs  IType.cs
Generator/Graph/: Node.cs  Resolver.cs
GirCWrapper/: GirCWrapper.cs  GirCWrapper.csproj
GirCWrapper/Gir/: GDoc.cs  (+6 more)
GirLoader/: File.cs  FileLoader.cs  FileLoaderContainer.cs  GirFile.cs  GirLoader.csproj  IEnumerables.cs  Loader.cs  Log.cs  RepositoryConverter.cs  RepositoryResolver.cs  TypeReferenceResolver.GlobalTypeCache.cs
GtkApp/: GtkApp.csproj  MyBox.cs  MyWindow.cs  Program.cs  box.glade  combobox.glade  test.html
Integration/: Integration.csproj  Integrator.cs  SyntaxHelper.cs  TemplateProvider.cs
Integrator/: Integrator.cs  Integrator.csproj  SyntaxHelper.cs  TemplateProvider.cs
Libs/: Directory.Build.props  nuget.config
Repository/: Container.cs  GirFile.cs  GirFileLoader.cs  GirFileLoaderContainer.cs  IEnumerables.cs  LoadedProject.cs  Loader.cs  Log.cs  Parser.cs  Program.cs  RepositoriesLoader.cs  Repository.cs  Repository.csproj  RepositoryInternal.cs  RepositoryLoader.cs  RepositoryLoaderContainer.cs  RepositoryResolver.cs  TargetsContainer.cs  TargetsLoader.cs  Test.cs
Samples/: Directory.Build.props
Tests/: Directory.Build.props
docs/: contributing.md  docfx.json  index.md  readme.md  toc.yml
properties/: GirCore.Extensions.props  GirCore.Integrations.props  GirCore.Libraries.props  GirCore.Logging.props  GirCore.Publishing.props  GirCore.Testing.props  GirCore.Tooling.props
scripts/: CleanLibs.fsx  GenerateGirTestLib.fsx  GenerateLibs.fsx  GetVersion.fsx
src/: CleanLibs.fsx  GenerateGirTestLib.fsx  GenerateLibs.fsx  GirCore.Libraries.props  GirCore.Libs.slnf  GirCore.Logging.props  GirCore.Nuget.props  GirCore.Publishing.props  GirCore.TestLib.slnf  GirCore.Testing.props  GirCore.sln  GirCore.slnx  NugetReadme.md  global.json
src/Native/GirTestLib/: classtype.c  classtype.h  girtest-alias-tester.c  girtest-alias-tester.h  girtest-bitfield-tester.c  girtest-bitfield-tester.h  girtest-byte-array-tester.c  girtest-byte-array-tester.h  girtest-bytes-tester.c  girtest-bytes-tester.h  girtest-callback-tester.c  girtest-callback-tester.h  girtest-class-tester.c  girtest-class-tester.h  girtest-clong-record-tester.c  girtest-clong-record-tester.h  girtest-clong-tester.c  girtest-clong-tester.h  girtest-constant-tester.h  girtest-culong-record-tester.c  girtest-culong-record-tester.h  girtest-culong-tester.c  girtest-culong-tester.h  girtest-enum-tester.c  girtest-enum-tester.h  girtest-error-tester.c  girtest-error-tester.h  girtest-fundamental-tester.c  girtest-fundamental-tester.h  girtest-initially-unowned-instance-creation-tester.c  girtest-initially-unowned-instance-creation-tester.h  girtest-instance-creation-tester.c  girtest-instance-creation-tester.h  girtest-integer-array-tester.c  girtest-integer-array-tester.h  girtest-interface-signal-tester.c  girtest-interface-signal-tester.h  girtest-long-record-tester.c  girtest-long-record-tester.h  girtest-long-tester.c  (+51 more)
src/Native/GirTestLib/data/: girtest-executor-impl.c  girtest-executor-impl.h  girtest-executor-private-impl.c  girtest-executor-private-impl.h  girtest-executor.c  girtest-executor.h  girtest-instantiatable-fundamental.c  girtest-instantiatable-fundamental.h  girtest-signaler.c  girtest-signaler.h
(+4367 files in other folders)
